Closed
Bug 1130892
Opened 10 years ago
Closed 10 years ago
Add-on Manager's "Tools for all add-ons" menu's menu item text disappears on mouse over
Categories
(Toolkit :: Add-ons Manager, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
| Tracking | Status | |
|---|---|---|
| firefox37 | --- | unaffected |
| firefox38 | + | fixed |
People
(Reporter: cpeterson, Assigned: mstange)
References
Details
(Keywords: regression, reproducible)
Attachments
(1 file)
|
7.22 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
[Tracking Requested - why for this release]:
This add-on manager bug is regression in Nightly 38 build 2015-02-06 from bug 1045213:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b3fa9d6b1310&tochange=b46cb1ef16f8
I am running OS X 10.10.2.
Comment 1•10 years ago
|
||
Might be any XUL page, the same occurs in the context menu in about:config.
| Assignee | ||
Comment 2•10 years ago
|
||
So this happens because the context menu belongs to a document that is not the root chrome document. I'll need to make that check aware of popups.
Assignee: nobody → mstange
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•10 years ago
|
||
Attachment #8561505 -
Flags: review?(roc)
Attachment #8561505 -
Flags: review?(roc) → review+
Updated•10 years ago
|
| Assignee | ||
Comment 4•10 years ago
|
||
Comment 5•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in
before you can comment on or make changes to this bug.
Description
•