Bug 1130892 - Allow vibrancy in popups from non-chrome prescontexts. r=roc